# py-oidc-auth-client

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/dependabot/: constraints.txt
.github/workflows/: build_job.yml  ci_job.yml
docs/source/: code-of-conduct.rst  conf.py  index.rst  whatsnew.rst
docs/source/_extra/: llms.txt
docs/source/_static/: custom.css
docs/source/api/: exceptions.rst  flows.rst  index.rst  public.rst  schema.rst  stable_public_api.rst  utils.rst
docs/source/guides/: choosing_a_strategy.rst  configuration.rst  non_interactive.rst  overview.rst  quickstart.rst  recipes.rst
src/py_oidc_auth_client/: __init__.py  __main__.py  exceptions.py  flows.py  schema.py  token_store.py  utils.py
tests/: conftest.py  test_authenticate.py  test_cli.py  test_exceptions.py  test_flows.py  test_token_store.py  test_utils.py  utils.py
