[build-system]
requires = ["flit_core >=3.2", "appdirs"]
build-backend = "flit_core.buildapi"
[project]
name = "py-oidc-auth-client"
description = "Client library for the OIDC Auth server."
authors = [{name = "DKRZ, Clint", email = "freva@dkrz.de"}]
readme = "README.md"
license = {file = "LICENSE"}
lassifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "httpx",
    "platformdirs",
    "rich",
    "typing_extensions",
]
[project.urls]
Documentation = "https://py-oidc-auth-client.readthedocs.io"
Issues = "https://github.com/freva-org/py-oidc-auth-client/issues"
Source = "https://github.com/freva-org/py-oidc-auth-client/"
[project.scripts]
oidc-auth = "py_oidc_auth_client.__main__:main"

[project.optional-dependencies]
dev = ["tox", "cryptography", "uvicorn", "py-oidc-auth[fastapi,tests]"]
cli = ["rich-argparse"]
tests = ["pytest",
         "pytest-env",
         "mock",
         "pytest-mock",
         "pytest-cov",
         "pytest-asyncio",
         "requests",
         "uvicorn",
         "fastapi",
         "python-multipart",
         "PyJWT[crypto]",
         ]
docs = ["sphinx-execute-code-python3",
        "sphinx-code-tabs",
        "sphinx-copybutton",
        "sphinx-sitemap",
        "sphinx-togglebutton",
        "sphinxcontrib-httpdomain",
        "sphinxext-opengraph",
        "sphinx-design",
        "pydata-sphinx-theme"
        ]
[package-data]
freva_auth = ["py.typed"]



[tool.pytest.ini_options]
log_cli = false
log_cli_level = "ERROR"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning:websockets",
    "ignore::DeprecationWarning:uvicorn"
]

[tool.flake8]
ignore = ["F405", "F403", "E704", "D107"]
[tool.pydocstyle]
add_ignore = ["D107", "D205", "D102", "D400"]

[tool.mypy]
files = "src"
strict = true
warn_unused_ignores = true
warn_unreachable = true
show_error_codes = true
install_types = true
non_interactive = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
ignore_missing_imports = true
allow_untyped_calls = true

[tool.isort]
known_first_party = ["oidc_auth"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise ImportError",
    "except ImportError",
    "except Exception",
    "except OSError",
    "if __name__ == '__main__':",
]

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
env_list = docs, lint, types
passenv = *
[testenv]
passenv = *
parallel_show_output = false
[testenv:test]
description = "Run the unit tests."
deps = -e .[tests]
commands =
    python3 -m pytest -vv --cov=py_oidc_auth_client --cov-report=html:coverage_report --junitxml report.xml --cov-report xml tests/
    python3 -m coverage report --fail-under=98.5 --precision=2
[testenv:docs]
description = "Create the documentation."
deps = -e .[docs]
       codespell
allowlist_externals = make
                      codespell
commands = codespell {posargs: --quiet-level=2} docs/source
           make -C docs clean
           make -C docs html

[testenv:lint]
description = "Check code quality."
deps = -e .
       black
       isort
       flake8
       pytest-stub
       pydocstyle
       codespell
       bandit[toml]
commands =
    python3 -m isort --check --profile black -t py312 -l 79 src
    python3 -m flake8 src --count --max-complexity=10 --ignore=F405,F403,E704,W503,C901 --max-line-length=100 --statistics --show-source
    codespell {posargs: --quiet-level=2} src/
    python3 -m pydocstyle src/py_oidc_auth_client
    bandit -r src/py_oidc_auth_client --severity-level medium --confidence-level high
[testenv:types]
description = "Static type checking."
deps = .
       mypy
       pytest-stub
commands = python3 -m mypy --install-types --non-interactive
[testenv:release]
description = "Bump a new version."
deps = git-python
       packaging
       requests
       tomli
commands = python3 bump.py tag py_oidc_auth_client
allowlist_externals = rm
                      curl
commands_pre = curl -H 'Cache-Control: no-cache' -Ls -o bump.py https://raw.githubusercontent.com/freva-org/freva-admin/main/release.py
commands_post = rm bump.py
"""
